# MyFirst3DSlicerExtensionTutorial

./: README
Part1snapshot/: CMakeLists.txt
Part1snapshot/LineIntensityProfile/: CMakeLists.txt  LineIntensityProfile.py
Part2snapshot/: CMakeLists.txt
Part2snapshot/LineIntensityProfile/: LineIntensityProfile.py
Part3snapshot/LineIntensityProfile/: LineIntensityProfile.py
Part4snapshot/LineIntensityProfile/: LineIntensityProfile.py
